* Added the support for new Disney BRDF material from Siggraph 2012 paper
* Upgraded Intel Oidn to v0.9.0
* Metal material uses a more accurate Albedo value (for Intel OIDN)
* Added "rounding" texture
* Added "modulo" texture
* Improved tiling feature of OIDN imagepipeline plugin
* Fix a bug in ToProperties code of "blender blend" texture when "halo" progression type was used

''Beta2 released''

### Fixed Bugs

* Fixed rendering resume feature

''Alpha0 released''

* Fixed a problem with infinite lights and BiDir or PhotonGI
* Fixed a bug when using radiance groups with variance clamping and OpenCL
* Fixed camera invisible objects usage with volumes
* Fixed TASK_EMIT of LightStrategyPower
* Fixed a crash when using RTPATHOCL and editing area lights (issue #173)
* Fixed a bug when using radiance groups with variance clamping and OpenCL

''Alpha1 released''

* Fixed a crash when using negative material emission values (issue #177)
* Fixed LXS parsing in pyluxcoretools
* Fixed a problem when mixing transparent and solid materials with Mix (issue #183)
* Fix a bug when using glossy coating with any specular material
* Fixed LXS parsing of point light source position
* Fixed object ID not being saved by FILESAVER engine
* Fixed a major bug in carpaint material (issue #186)
* Fixed spelling mistake in cloth material "wool gabardine" preset
* Fixed Scene::RemoveUnusedMeshes()
* Fixed a bug in Mix material when working with specular materials (issue #187)
* Fixed an overflow problem when using an heterogenous volume on very large segments
* Sun relative size has now a lower bound of 1.0 to avoid numerical precision problems
* Fixed a problem with Scene::ToProperties() after editing a scene
* Fixed a self-shadow problem with area light sources

''Beta1 released''

* Fix ToProperties() of mapspherelight and spherelight
* Fixed a problem with caustic cache size when both PhotonGI caches were
  enabled and automatic stop condition for indirect cache was used