@@ -22,6 +22,7 @@
 #include <vector>
 #include <boost/atomic.hpp>
 #include <boost/thread/mutex.hpp>
+#include <boost/thread/barrier.hpp>
 
 #include "luxrays/utils/properties.h"
 #include "luxrays/utils/utils.h"
@@ -211,6 +212,7 @@ typedef struct {
 		u_int lookUpMaxCount;
 		float lookUpRadius, lookUpRadius2, lookUpNormalAngle,
 				mergeRadiusScale;
+		u_int updateSpp;
 	} caustic;
 
 	PhotonGIDebugType debugType;
@@ -280,7 +282,8 @@ public:
 	
 	const PhotonGICacheParams &GetParams() const { return params; }
 
-	void Preprocess();
+	void Preprocess(const u_int threadCount);
+	void Update(const u_int threadIndex, const Film &film);
 
 	luxrays::Spectrum GetIndirectRadiance(const BSDF &bsdf) const;
 	luxrays::Spectrum GetCausticRadiance(const BSDF &bsdf) const;
@@ -320,7 +323,7 @@ private:
 		boost::atomic<u_int> &globalCausticPhotonsTraced,
 		boost::atomic<u_int> &globalIndirectSize,
 		boost::atomic<u_int> &globalCausticSize);
-	void TracePhotons();
+	void TracePhotons(const bool indirectEnabled, const bool causticEnabled);
 	void FilterVisibilityParticlesRadiance(const std::vector<luxrays::Spectrum> &radianceValues,
 			std::vector<luxrays::Spectrum> &filteredRadianceValues) const;
 	void CreateRadiancePhotons();
@@ -337,6 +340,10 @@ private:
 
 	const Scene *scene;
 	PhotonGICacheParams params;
+
+	u_int threadCount;
+	std::unique_ptr<boost::barrier> threadsSyncBarrier;
+	u_int lastUpdateSpp, updateSeedBase;
 
 	// Visibility map
 	std::vector<PGICVisibilityParticle> visibilityParticles;
@@ -359,7 +366,7 @@ BOOST_CLASS_VERSION(slg::GenericPhoton, 1)
 BOOST_CLASS_VERSION(slg::PGICVisibilityParticle, 1)
 BOOST_CLASS_VERSION(slg::Photon, 1)
 BOOST_CLASS_VERSION(slg::RadiancePhoton, 1)
-BOOST_CLASS_VERSION(slg::PhotonGICache, 1)
+BOOST_CLASS_VERSION(slg::PhotonGICache, 2)
 
 BOOST_CLASS_EXPORT_KEY(slg::GenericPhoton)
 BOOST_CLASS_EXPORT_KEY(slg::PGICVisibilityParticle)
