@@ -103,7 +103,7 @@ void TilePathCPURenderEngine::StartLockLess() {
 
 		// photonGICache will be nullptr if the cache is disabled
 		if (photonGICache)
-			photonGICache->Preprocess();
+			photonGICache->Preprocess(renderThreads.size());
 	}
 
 	//--------------------------------------------------------------------------
